--- a/Forge.Web/Styles/Components/_footer.scss
+++ b/Forge.Web/Styles/Components/_footer.scss
@@ -12,6 +12,7 @@
     text-align: center;
     font-size: 12px;
     margin-top: -1px;
+    padding-left: 200px;
 
     .footer__nav{
         padding: 10px;
