--- a/Forge.Web/Styles/Components/_designer.scss
+++ b/Forge.Web/Styles/Components/_designer.scss
@@ -15,6 +15,11 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
 .designer{
     position: relative;
+    
+}
+
+.designer__static{
+    padding-left: $size-nav-left-width;
 }
 
 
@@ -32,16 +37,16 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 // __List
 // ---------------------------
 .designer__list{
-    display: table-cell;
+    position: fixed;
     vertical-align: top;
-    top: 0;
+    top: $size-nav-height;
     bottom: 0;
     left: 0;
-    width: 200px;
+    width: $size-nav-left-width;
     padding: 10px;
-    border: 1px solid $color-primary-30;
     background: white;
-    min-height: 400px;
+    border-right: 1px solid $color-primary-40;
+    height: calc(100% - $size-nav-height);
     z-index: 10;
 
     overflow: visible;
@@ -50,27 +55,31 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     @include transition(transform, 0.3s);
     //@include soft-shadow();
 
-    @media screen and (max-width: 720px){
-        position: absolute;
-        
+    @media screen and (max-width: 720px){        
         & ~ .designer__overlay { display: block; }
+        & ~ .designer__static { padding-left: 44px; }
     }
     
     h3 { border-top-left-radius: 3px; }
 
     // --Empty
-    &.designer__list--empty{ 
+    &.designer__list--empty { 
+        .designer__list-actions{ display: none; }
+        &~.designer__static { padding-left: 0 !important; }
+        
         display: none;
-        //&~.designer__stage .stage__menu { display: none; }
+        //&~.designer__stage { display: none; }
     }
 
     // --Closed
-    &.designer__list--closed{
+    &.designer__list--closed {
+        
+
         // MOBILE
         @media screen and (max-width: 720px){
             @include translateX(-156px);
-
-             & ~ .designer__overlay { display: none; }
+            & ~ .designer__static { padding-left: 44px; }
+            & ~ .designer__overlay { display: none; }
 
             // Mini buttons to become stacked
             // vertically on visible sidebar.
@@ -84,9 +93,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
                     width: 50px;
                     padding: 20px 10px;
                     border: none !important;
-                    color: $color-primary-70 !important;
-                    
-                    &:hover { color: $color-primary-80 !important; }
+                    //color: $color-primary-40 !important;
                 }
             }
 
@@ -114,7 +121,7 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
         .designer__mini-buttons{
             display: flex;
-            border-bottom: 2px solid $color-primary-60;
+            border-bottom: 1px solid $color-primary-20;
 
             button{
                 flex-grow: 1;
@@ -122,39 +129,26 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
                 min-width: 0;
                 width: 44px;
                 background: transparent;
-                border-bottom: 2px solid $color-primary-60;
-                border-radius: 3px 3px 0 0;
                 margin-bottom: -2px;
                 color: $color-primary-70;              
 
 
-                &:after { float: none; text-shadow: none; }
+                &:after { float: none; }
                 &:hover{ 
+                    //color: white;
                     color: $color-primary-80;
-                    border-color: $color-primary-70;
                 }
 
                 &.button--active{
-                    color: $color-secondary-50;
-                    border-color: $color-secondary-50;
+                    color: $color-primary-80;
                     &:after { text-shadow: none; }
                 }
             }
+
+            .icon--new {
+                color: $color-tertiary-30 !important;
+            }
         }
-    }
-
-    // __Add
-    // ---------------------------
-    .designer__add {
-        height: 40px !important;
-        margin-bottom: 10px;
-        color: white !important;
-
-        &:before{ 
-            @include button-icon("\f218");
-            margin-right: 10px;
-
-        }  
     }
 
     // Space for scrollbar
@@ -174,19 +168,26 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
     // __List-Item
     // ---------------------------
     .designer__list-item{
-        border-left: 5px solid $color-primary-30;
-        &:hover{ background: $color-primary-20;}
+        border-left: 5px solid transparent;
+        &:hover{ 
+            //background: $color-primary-20; 
+            .button{
+                //color: white !important;
+            }
+        }
+
         button {
             display: block;
             width: 100%;
             text-align: left;
-            height: 40px;
+            height: 30px;
             padding: 10px;
             border-radius: 0;
             border: none;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            //color: $color-primary-40;
         }
 
         &.setting--active{ 
@@ -201,8 +202,8 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
 
         &.designer__list-item--unsaved{
             border-color: $color-action-30 !important;
-            button {
-                font-weight: 700;
+            .button {
+                //font-weight: 700;
                 &:before{ content: "* "; }
             }
         }
@@ -211,8 +212,8 @@ $width-toggle-total: ($width-settings - ($width-toggle + 10px));
         // Active List-Item
         // (List & Search)
         &.designer__list-item--selected{
-            border-color: $color-secondary-50 !important;
-            background: $color-secondary-70 !important;
+            border-color: $color-secondary-40 !important;
+            background: $color-secondary-50 !important;
             .button{
                 color: white !important;
             }
