--- a/Forge.Web/Styles/Components/_nav.scss
+++ b/Forge.Web/Styles/Components/_nav.scss
@@ -10,7 +10,7 @@ $nav-slide-background:      $color-primary-10;
 
 // Units
 // --------------------------------
-$nav-arrow-size: 10px;
+$nav-arrow-size: 8px;
 
 // MOBILE ( < 720px  )
 // ================================
@@ -45,7 +45,7 @@ $nav-arrow-size: 10px;
             text-align: left;
 
             .arrow {
-                left: 16px;
+                left: 30px;
             }
         }
 
@@ -54,22 +54,23 @@ $nav-arrow-size: 10px;
             text-align: right;
 
             .arrow {
-                right: 14px;
+                right: 30px;
             }
         }
 
         // Mobile-ONLY
         .toggle {
-            font-family: "Ionicons";
+            font-family: "Linearicons-Free";
             display: inline-block;
             color: $nav-font-color;
             cursor: pointer;
-            font-size: 38px;
+            font-size: 24px;
             padding: 0 15px;
             vertical-align: middle;
             line-height: $size-nav-height;
             height: $size-nav-height;
             text-shadow: 2px 2px rgba(black, 0.2);
+            background: none;
 
             &:hover, &.t-open {
                 color: $nav-hover-font-color;
@@ -78,13 +79,13 @@ $nav-arrow-size: 10px;
             &.nav__menu {
                 float: left;
                 &:after{
-                    content: "\f394";
+                    content: "\e871";
                 }
             }
             // Toggle Account Menu
             &.nav__user {
                 float: right;
-                &:after{ content: "\f3a0"; }
+                &:after{ content: "\e82a"; }
             }
         }
 
