--- a/Forge.Web/Styles/Components/_tabs.scss
+++ b/Forge.Web/Styles/Components/_tabs.scss
@@ -53,7 +53,7 @@ $border-color: $color-background-menu;
     text-align: left;
     padding: 0 10px;
     background: none;
-    border-bottom: 10px solid $border-color;
+    //border-bottom: 10px solid $border-color;
 }
 
 @media screen and (max-width: 420px){
