--- a/Forge.Web/Styles/_mixins.scss
+++ b/Forge.Web/Styles/_mixins.scss
@@ -60,9 +60,9 @@
 // Common Styles
 // -----------------------------------------
 @mixin button-icon($content){
-    font-family: "Ionicons";
+    font-family: "Linearicons-Free";
     content: $content;
-    font-size: 28px;
+    font-size: 20px;
     vertical-align: middle;
     //color: white;
     //text-shadow: 2px 2px rgba(black, 0.2);
