--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -101,6 +101,7 @@ b { font-weight: 600; }
 @import 'Components/overlay';
 @import 'Components/dialogs';
 @import 'Components/tooltips';
+@import 'Components/account';
 
 // Controls
 @import 'Components/dictionary';
