--- a/Forge.Web/Styles/Components/_nav.scss
+++ b/Forge.Web/Styles/Components/_nav.scss
@@ -69,7 +69,8 @@ $nav-arrow-size: 8px;
             vertical-align: middle;
             line-height: $size-nav-height;
             height: $size-nav-height;
-            text-shadow: 2px 2px rgba(black, 0.2);
+            font-weight: bold;
+            //text-shadow: 2px 2px rgba(black, 0.2);
             background: none;
 
             &:hover, &.t-open {
