--- a/Forge.Web/Styles/Components/_account.scss
+++ b/Forge.Web/Styles/Components/_account.scss
@@ -7,4 +7,11 @@
     max-width: 600px;
     margin: auto;
     padding: 20px;
+    
+    .account__login{ text-align: center; }
+
+    .account__details{
+        display: flex;
+        flex-direction: column
+    }
 }
