--- a/Forge.Web/Views/Designer/Index.cshtml
+++ b/Forge.Web/Views/Designer/Index.cshtml
@@ -6,6 +6,6 @@
 <div id="designer"></div>
 
 @section scripts{
-    @Html.Render("designer", "Forge.Designer.Provider")
+    @Html.Render("designer", "Forge.Designer.Provider", new { id = Model })
 }
 
