--- a/Forge.Web/Styles/Components/_buttons.scss
+++ b/Forge.Web/Styles/Components/_buttons.scss
@@ -13,18 +13,18 @@ $nav-slide-background:      $color-primary-10;
 $nav-arrow-size: 10px;
 
 
+@mixin button-gradient($color1, $color2){
+    @include linear-gradient-vertical-2($color1, 0, $color2, 100%);
+}
+
 // MOBILE ( < 720px  )
 // ================================
 button,
 .button{
     position: relative;
     display: inline-block;
-    padding: 5px 0;
+    padding: 5px 10px;
     cursor: pointer;
-    background: $color-secondary-70;
-    color: $color-primary-10;
-    border: none;
-    //border-radius: 3px;
     outline: none;
     line-height: 12px;
     font-family: inherit;
@@ -32,7 +32,16 @@ button,
     min-width: 75px;
     overflow: hidden;
 
-    &:hover{ background: $color-secondary-50; }
+    color: $color-primary-10;
+    background: $color-secondary-70;
+    @include button-gradient($color-secondary-50, $color-secondary-60);
+
+    border: none;
+    border-radius: 3px;
+    //border: 1px solid $color-secondary-60;
+    //text-shadow: 1px 1px 0 rgba(black, 0.3);
+
+    &:hover{  @include button-gradient($color-secondary-30, $color-secondary-60); }
 
     &:active{ background: $color-secondary-70; }
         
@@ -40,7 +49,6 @@ button,
 
     // Color Variations
     // ---------------------------
-
     &.button--primary{
         background: $color-primary-70;
         &:hover{ background: mix($color-primary-80, $color-primary-70, 50%); }
@@ -48,7 +56,11 @@ button,
 
     &.button--tertiary{
         background: $color-tertiary-30;
-        &:hover{ background: $color-tertiary-50; }
+         @include button-gradient($color-tertiary-50, $color-tertiary-60);
+        &:hover{ 
+            background: $color-tertiary-50;
+             @include button-gradient($color-tertiary-40, $color-tertiary-60);
+        }
     }
 
     &.button--action{
