--- a/Forge.Web/Styles/Components/_nav.scss
+++ b/Forge.Web/Styles/Components/_nav.scss
@@ -72,6 +72,7 @@ $nav-arrow-size: 8px;
             font-weight: bold;
             //text-shadow: 2px 2px rgba(black, 0.2);
             background: none;
+            border: none;
 
             &:hover, &.t-open {
                 color: $nav-hover-font-color;
