--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -102,6 +102,7 @@ b { font-weight: 600; }
 @import 'Components/dialogs';
 @import 'Components/tooltips';
 @import 'Components/account';
+@import 'Components/shrinky';
 
 // Controls
 @import 'Components/dictionary';
