--- a/Forge.Web/Styles/Components/_designer__stage.scss
+++ b/Forge.Web/Styles/Components/_designer__stage.scss
@@ -15,7 +15,7 @@
 }
 
 .stage{ 
-    border-top: 1px solid $color-background-menu;
+    //border-top: 1px solid $color-background-menu;
     .designer__add{
         margin: 0 5px;
         height: 40px;
