--- a/Forge.Web/Styles/Components/_tabs.scss
+++ b/Forge.Web/Styles/Components/_tabs.scss
@@ -23,7 +23,7 @@ $border-color: $color-background-menu;
     border: none;
     outline: none;
     user-select: none;
-    text-shadow: 1px 1px rgba(black, 0.3);
+    //text-shadow: 1px 1px rgba(black, 0.3);
     font-size: 16px;
 
     label {
@@ -53,6 +53,7 @@ $border-color: $color-background-menu;
     text-align: left;
     padding: 0 10px;
     background: none;
+    margin-bottom: -1px;
     //border-bottom: 10px solid $border-color;
 }
 
