--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -588,7 +588,6 @@ h5 {
   border: none;
   outline: none;
   user-select: none;
-  text-shadow: 1px 1px rgba(0, 0, 0, 0.3);
   font-size: 16px; }
   .tab label {
     position: relative;
@@ -609,7 +608,8 @@ h5 {
 .tab-group {
   text-align: left;
   padding: 0 10px;
-  background: none; }
+  background: none;
+  margin-bottom: -1px; }
 
 @media screen and (max-width: 420px) {
   .tab-group {
@@ -625,28 +625,27 @@ h5 {
     .designer__stage .stage__workspace {
       padding: 10px; } }
 
-.stage {
-  border-top: 1px solid white; }
-  .stage .designer__add {
-    margin: 0 5px;
-    height: 40px; }
-  .stage .designer__recent {
-    text-align: left; }
-    .stage .designer__recent .recent__columns {
-      display: flex;
-      justify-content: center; }
-      .stage .designer__recent .recent__columns ul + ul {
-        margin-left: 50px; }
-      .stage .designer__recent .recent__columns button {
-        text-align: left; }
-      @media screen and (max-width: 600px) {
-        .stage .designer__recent .recent__columns {
-          flex-direction: column; }
-          .stage .designer__recent .recent__columns ul + ul {
-            margin: 30px 0 0 0; } }
-    .stage .designer__recent .recent__header {
-      font-size: 22px;
-      margin-bottom: 10px; }
+.stage .designer__add {
+  margin: 0 5px;
+  height: 40px; }
+
+.stage .designer__recent {
+  text-align: left; }
+  .stage .designer__recent .recent__columns {
+    display: flex;
+    justify-content: center; }
+    .stage .designer__recent .recent__columns ul + ul {
+      margin-left: 50px; }
+    .stage .designer__recent .recent__columns button {
+      text-align: left; }
+    @media screen and (max-width: 600px) {
+      .stage .designer__recent .recent__columns {
+        flex-direction: column; }
+        .stage .designer__recent .recent__columns ul + ul {
+          margin: 30px 0 0 0; } }
+  .stage .designer__recent .recent__header {
+    font-size: 22px;
+    margin-bottom: 10px; }
 
 .designer__link {
   display: block; }
@@ -799,7 +798,8 @@ h5 {
 .designer__views {
   position: relative;
   display: table;
-  width: 100%; }
+  width: 100%;
+  margin-top: 170px; }
   .designer__views h3 {
     padding: 0 0 10px 20px; }
 
@@ -929,7 +929,6 @@ h5 {
         content: "* "; }
     .designer__list .designer__list-item.designer__list-item--selected {
       border-color: #40a0c5 !important;
-      background: #1088b6 !important;
       /*&:after{
                 position: absolute;
                 top: 0;
@@ -938,7 +937,7 @@ h5 {
                 @include arrow-right(20px, $bg-list-item--active);
             }*/ }
       .designer__list .designer__list-item.designer__list-item--selected .button {
-        color: white !important; }
+        color: #1088b6 !important; }
 
 .designer__list-header {
   font-weight: 600;
@@ -1301,6 +1300,33 @@ input {
   #account .account__details {
     display: flex;
     flex-direction: column; }
+
+.shrinky {
+  position: fixed;
+  top: 55px;
+  z-index: 100;
+  width: 100%;
+  transform: translateY(0);
+  transition: transform 0.3s ease-in-out; }
+  .shrinky h1 {
+    transition: all 0.7s ease-in-out;
+    transform: translateY(0); }
+  .shrinky .tab {
+    transition: font-size 0.3s ease-in-out; }
+  .shrinky + .designer__list {
+    transition: top 0.3s ease-in-out;
+    top: 225px; }
+  .shrinky.shrinky--shrink {
+    transform: translateY(-75px); }
+    .shrinky.shrinky--shrink h1 {
+      opacity: 0;
+      transform: translateY(-10px); }
+    .shrinky.shrinky--shrink .tab {
+      font-size: 14px; }
+    .shrinky.shrinky--shrink + .designer__list {
+      top: 148px; }
+    .shrinky.shrinky--shrink ~ .designer__static .designer__views {
+      margin-top: 200px; }
 
 .dictionary {
   display: table;
