--- a/Forge.Web/Styles/site.css
+++ b/Forge.Web/Styles/site.css
@@ -53,14 +53,14 @@ table {
   top: 0;
   left: 0;
   right: 0;
-  background-color: #0d6d92;
-  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(5, 41, 55, 0.2) 15px, rgba(5, 41, 55, 0.2) 30px), linear-gradient(90deg, #08445b, #2894bd, #08445b);
+  background-color: #363636;
+  background-image: repeating-linear-gradient(45deg, transparent, transparent 15px, rgba(20, 20, 20, 0.2) 15px, rgba(20, 20, 20, 0.2) 30px), linear-gradient(90deg, #222222, #575757, #222222);
   background-size: 200% 200%;
   -webkit-animation: bganimate 20s linear infinite;
   -moz-animation: bganimate 20s linear infinite;
   animation: bganimate 20s linear infinite;
   text-align: center;
-  border-bottom: 1px solid #1088b6;
+  border-bottom: 1px solid #444;
   box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3); }
 
 @-webkit-keyframes bganimate {
@@ -114,13 +114,13 @@ table {
 
 .emphasis {
   font-weight: 700;
-  color: #1088b6; }
+  color: #444; }
 
 .list .list__item button {
   text-align: left; }
 
 .section--secondary {
-  background-color: #0d6d92;
+  background-color: #363636;
   background-image: url(../Content/Images/cubes.png); }
 
 .section--summary {
@@ -128,7 +128,7 @@ table {
   color: #f8f8f8; }
   .section--summary h1 {
     color: white;
-    text-shadow: 2px 2px #0d6d92; }
+    text-shadow: 2px 2px #363636; }
 
 .no-results {
   text-align: center;
@@ -147,8 +147,8 @@ table {
   .panel.panel--centered {
     text-align: center; }
   .panel.panel--clickable:hover {
-    background: #b7dbe9;
-    border-color: #0e7aa4; }
+    background: #c7c7c7;
+    border-color: #3d3d3d; }
   .panel h4 {
     margin: -10px;
     margin-bottom: 20px;
@@ -251,8 +251,8 @@ b {
   height: 55px;
   z-index: 1000;
   font-size: 14px;
-  background-color: #1088b6;
-  border-bottom: 1px solid #2894bd;
+  background-color: #444;
+  border-bottom: 1px solid #575757;
   -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1); }
@@ -322,10 +322,10 @@ b {
           width: 100%;
           line-height: 1;
           padding: 0 15px;
-          color: #1088b6;
+          color: #444;
           font-weight: 600; }
           #nav .nav-group ul li a:hover {
-            color: #0e7aa4; }
+            color: #3d3d3d; }
 
 @media (min-width: 720px) {
   nav {
@@ -433,7 +433,7 @@ b {
   padding: 10px;
   font-size: 12px; }
   .message.warning {
-    background-color: #88c4db; }
+    background-color: #a2a2a2; }
   .message.information {
     background-color: #f8f8f8; }
 
@@ -536,7 +536,7 @@ button,
   .button .button__clicky {
     position: absolute;
     display: inline-block;
-    background: rgba(136, 196, 219, 0.7);
+    background: rgba(162, 162, 162, 0.7);
     border-radius: 100%;
     transform: scale(0); }
   button.button--animate .button__clicky,
@@ -928,7 +928,7 @@ h5 {
       .designer__list .designer__list-item.designer__list-item--unsaved .button:before {
         content: "* "; }
     .designer__list .designer__list-item.designer__list-item--selected {
-      border-color: #40a0c5 !important;
+      border-color: dimgray !important;
       /*&:after{
                 position: absolute;
                 top: 0;
@@ -937,7 +937,7 @@ h5 {
                 @include arrow-right(20px, $bg-list-item--active);
             }*/ }
       .designer__list .designer__list-item.designer__list-item--selected .button {
-        color: #1088b6 !important; }
+        color: #444 !important; }
 
 .designer__list-header {
   font-weight: 600;
@@ -1313,9 +1313,6 @@ input {
     transform: translateY(0); }
   .shrinky .tab {
     transition: font-size 0.3s ease-in-out; }
-  .shrinky + .designer__list {
-    transition: top 0.3s ease-in-out;
-    top: 225px; }
   .shrinky.shrinky--shrink {
     transform: translateY(-75px); }
     .shrinky.shrinky--shrink h1 {
@@ -1323,10 +1320,9 @@ input {
       transform: translateY(-10px); }
     .shrinky.shrinky--shrink .tab {
       font-size: 14px; }
-    .shrinky.shrinky--shrink + .designer__list {
-      top: 148px; }
-    .shrinky.shrinky--shrink ~ .designer__static .designer__views {
-      margin-top: 200px; }
+
+.stick-to-shrinky {
+  transition: top 0.3s ease-in-out; }
 
 .dictionary {
   display: table;
