--- a/Forge.Web/Styles/site.scss
+++ b/Forge.Web/Styles/site.scss
@@ -49,16 +49,16 @@ a {
     text-decoration: none;
     font-size: 14px;
     cursor: pointer;
-    color: $color-secondary-50;
+    color: $color-link;
 
     &:visited,
     &:active,
     &:link{
-        color: $color-secondary-50;
+        color: $color-link;
     }
 
     &:hover{
-        color: $color-secondary-60;
+        color: $color-link-60;
     }
 }
 
